added requirments.txt file

--- a/exploritory_data_analysis.ipynb
+++ b/exploritory_data_analysis.ipynb
@@ -10,15 +10,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#!pip install snowflake-connector-python"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
    "outputs": [],
@@ -192,8 +183,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.2 Sample query\n",
-    "Select listings data for albany market."
+    "#### Get sample of data from chicago market"
    ]
   },
   {
