updated ingest_data file

--- a/ingest_data.ipynb
+++ b/ingest_data.ipynb
@@ -58,7 +58,7 @@
    "metadata": {},
    "source": [
     "## 2. Create functions\n",
-    "#### 2.1 Use Beautiful Soup to scrape URLs needed to download data\n",
+    "#### 2.1 Use Beautiful Soup to downaload URLs needed to download data\n",
     "This function will download listings, reviews, and geospatial data."
    ]
   },
@@ -72,8 +72,8 @@
     "from bs4 import BeautifulSoup\n",
     "import boto3\n",
     "\n",
-    "# Function to scrape Inside Airbnb page and get URLs for desired file types and market\n",
-    "def scrape_airbnb_urls(market):\n",
+    "# Funtion to download Inside Airbnb page and get URLs for desired file types and market\n",
+    "def download_airbnb_urls(market):\n",
     "    url = \"https://insideairbnb.com/get-the-data/\"\n",
     "    response = requests.get(url)\n",
     "    if response.status_code == 200:\n",
@@ -89,7 +89,7 @@
     "                    urls.append(href)\n",
     "        return urls\n",
     "    else:\n",
-    "        raise ValueError(f\"Failed to scrape Inside Airbnb page. Status code: {response.status_code}\")"
+    "        raise ValueError(f\"Failed to download Inside Airbnb page. Status code: {response.status_code}\")"
    ]
   },
   {
@@ -243,15 +243,15 @@
    ],
    "source": [
     "for market in markets:\n",
-    "    # Scrape Inside Airbnb page for URLs ending with .csv.gz or .geojson for the specified market\n",
-    "    scraped_urls = scrape_airbnb_urls(market)\n",
+    "    # Doanload Inside Airbnb page for URLs ending with .csv.gz or .geojson for the specified market\n",
+    "    downloaded_urls = download_airbnb_urls(market)\n",
     "\n",
     "    # S3 bucket and prefix where you want to upload the data\n",
     "    bucket_name = 'airbnb-capstone-project'\n",
     "    s3_prefix = market\n",
     "\n",
-    "    # Download data from scraped URLs\n",
-    "    data = download_data(market, scraped_urls)\n",
+    "    # Download data from doanloaded URLs\n",
+    "    data = download_data(market, downloaded_urls)\n",
     "\n",
     "    # Upload data to S3\n",
     "    upload_to_s3(data, bucket_name, s3_prefix)"
