Update ingest_data script

--- a/ingest_data.ipynb
+++ b/ingest_data.ipynb
@@ -58,8 +58,7 @@
    "metadata": {},
    "source": [
     "## 2. Create functions\n",
-    "#### 2.1 Use Beautiful Soup to downaload URLs needed to download data\n",
-    "This function will download listings, reviews, and geospatial data."
+    "#### 2.1 Function to retrieve URLs for listings, reviews, and geospatial data from Inside Airbnb"
    ]
   },
   {
@@ -68,10 +67,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests\n",
-    "from bs4 import BeautifulSoup\n",
-    "import boto3\n",
-    "\n",
     "# Funtion to download Inside Airbnb page and get URLs for desired file types and market\n",
     "def download_airbnb_urls(market):\n",
     "    url = \"https://insideairbnb.com/get-the-data/\"\n",
