Update ingest_data script

--- a/ingest_data.ipynb
+++ b/ingest_data.ipynb
@@ -121,7 +121,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.3 Last function will upload downloaded data into S3"
+    "#### 2.3 Function to upload data to S3"
    ]
   },
   {
@@ -152,20 +152,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Ingest and upload market data to S3 bucket\n",
+    "Estimated time to download market data and upload is 15 to 20 minutes. Provide a list of markets."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "markets = ['albany','los-angeles','san-francisco','new-york-city','chicago','seattle','washington-dc']"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 3. Ingest and upload market data for S3\n",
-    "Estimated time to download market data and upload is 15 to 20 minutes."
    ]
   },
   {
