update ingest_data script

--- a/ingest_data.ipynb
+++ b/ingest_data.ipynb
@@ -156,16 +156,7 @@
    "metadata": {},
    "source": [
     "## 3. Ingest and upload market data to S3 bucket\n",
-    "Estimated time to download market data and upload is 15 to 20 minutes. Provide a list of markets."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "markets = ['albany','los-angeles','san-francisco','new-york-city','chicago','seattle','washington-dc']"
+    "Estimated time to download market data and upload is 15 to 20 minutes."
    ]
   },
   {
@@ -237,18 +228,19 @@
     }
    ],
    "source": [
-    "for market in markets:\n",
-    "    # Doanload Inside Airbnb page for URLs ending with .csv.gz or .geojson for the specified market\n",
-    "    downloaded_urls = download_airbnb_urls(market)\n",
+    "markets = ['albany','los-angeles','san-francisco','new-york-city','chicago','seattle','washington-dc']\n",
     "\n",
+    "for market in markets:\n",
+    "    # Retrieve URLs for Inside Airbnb data\n",
+    "    source_urls = download_airbnb_urls(market)\n",
+    "\n",
+    "    # Download data from doanloaded URLs\n",
+    "    data = download_data(market, source_urls)\n",
+    "\n",
+    "    # Upload data to S3\n",
     "    # S3 bucket and prefix where you want to upload the data\n",
     "    bucket_name = 'airbnb-capstone-project'\n",
     "    s3_prefix = market\n",
-    "\n",
-    "    # Download data from doanloaded URLs\n",
-    "    data = download_data(market, downloaded_urls)\n",
-    "\n",
-    "    # Upload data to S3\n",
     "    upload_to_s3(data, bucket_name, s3_prefix)"
    ]
   },
