added file structure

--- a/train.ipynb
+++ b/train.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,8 @@
     "from sklearn.neighbors import KNeighborsRegressor\n",
     "from sklearn.impute import SimpleImputer\n",
     "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor, AdaBoostRegressor\n",
-    "\n",
+    "#import functions from helper_functions.py\n",
+    "from helper_functions import get_data, write_to_snowflake\n",
     "# Enable pandas to display up to 500 columns\n",
     "pd.set_option('display.max_columns', 500)\n"
    ]
@@ -50,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,14 +83,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Connected to Snowflake successfully at 2024-07-28 20:0317\n"
+      "Connected to Snowflake successfully at 2024-07-30 20:0439\n"
      ]
     }
    ],
@@ -104,52 +105,12 @@
     "        account='ygeuort-alb19263',\n",
     "        warehouse='COMPUTE_WH',\n",
     "        database='AIRBNB',\n",
-    "        schema='ODS'\n",
     "    )\n",
     "\n",
     "    print(f'Connected to Snowflake successfully at {current_time}')\n",
     "\n",
     "except Exception as e:\n",
     "    print(f'Failed to connect to Snowflake on {current_time} due to error code {e}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_data(sql_query, date_columns=None):\n",
-    "    \"\"\"\n",
-    "    Executes a SQL query and returns the result as a pandas DataFrame.\n",
-    "\n",
-    "    Args:\n",
-    "        sql_query (str): SQL query to execute.\n",
-    "\n",
-    "    Returns:\n",
-    "        df_result: Resulting DataFrame from the SQL query.\n",
-    "    \"\"\"\n",
-    "    try:\n",
-    "        cursor = conn.cursor()\n",
-    "        \n",
-    "        cursor.execute(sql_query)\n",
-    "\n",
-    "        # load data into dataframe\n",
-    "        df_result = cursor.fetch_pandas_all()\n",
-    "\n",
-    "        # Convert column names to lowercase\n",
-    "        df_result.columns = map(str.lower, df_result.columns)\n",
-    "\n",
-    "        # Parse specified date columns\n",
-    "        if date_columns:\n",
-    "            for col in date_columns:\n",
-    "                df_result[col] = pd.to_datetime(df_result[col], errors='coerce')\n",
-    "\n",
-    "    finally:\n",
-    "        if cursor is not None:\n",
-    "            cursor.close()\n",
-    "\n",
-    "    return df_result"
    ]
   },
   {
@@ -161,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -170,25 +131,41 @@
        "(111052, 68)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "sql_query = '''\n",
-    "select * from listings\n",
+    "select * from ods.listings\n",
     " '''\n",
     "\n",
-    "df_raw = get_data(sql_query)\n",
+    "df_raw = get_data(sql_query, conn=conn)\n",
     "df_raw.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/samkobrin/Documents/GitHub/airbnb-pricing-dashboard/helper_functions.py:56: UserWarning: Pandas Dataframe has non-standard index of type <class 'pandas.core.indexes.numeric.Int64Index'> which will not be written. Consider changing the index to pd.RangeIndex(start=0,...,step=1) or call reset_index() to keep index as column(s)\n",
+      "  success, num_chunks, num_rows, output = write_pandas(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created table and data loaded to Snowflake at 2024-07-30 20:1936\n"
+     ]
+    }
+   ],
    "source": [
     "# Select features and target for the model\n",
     "features = ['market', 'room_type', 'accommodates', 'bathrooms', 'beds', 'latitude', 'longitude', 'amenities']\n",
@@ -200,11 +177,24 @@
     "# Filter the dataframe to include only the selected features and target column\n",
     "df = df_raw[features + [target]]\n",
     "\n",
-    "# Remove rows where the price exceeds $600 per night to avoid outliers\n",
+    "# Remove NA values from the 'price' column\n",
+    "df_raw_no_na = df_raw[target].dropna()\n",
+    "# Remove rows where the price exceeds $600 per night (97th percentile) to avoid outliers, consider dropping vals <40 (3rd percentile)\n",
     "df = df[df[target] <= 600]\n",
     "\n",
     "# Drop rows with missing values in the target column to ensure data integrity\n",
     "df = df.dropna(subset=[target])\n",
+    "# write cleaned data to snowflake feature store\n",
+    "write_to_snowflake(df,conn=conn, snowflake_schema_name='FEATURE_STORE', snowflake_table_name='listings_cleaned')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#add code for pulling from snowflake feature store\n",
     "\n",
     "# Separate the features (X) and the target (y)\n",
     "X = df.drop(columns=[target])\n",
@@ -216,34 +206,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cross-validation MAE scores: [46.68859149 45.83769521 46.89561522 46.04752452 45.3387151  46.27384157\n",
-      " 47.72848338 46.45816514 44.7925808  46.91317849]\n",
-      "Average cross-validation MAE: 46.29743909095708\n",
-      "Cross-validation RMSE scores: [71.39870686 69.99117595 71.61107009 69.75335034 67.972491   69.71784132\n",
-      " 71.65582086 69.93141402 69.28409406 70.97600159]\n",
-      "Average cross-validation RMSE: 70.22919660817408\n",
-      "Test set MAE: 46.041895386942365\n",
-      "Test set RMSE: 69.08103970267469\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['regression_pipeline.joblib']"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Get model run start time\n",
     "start_time = datetime.now()\n",
@@ -302,8 +267,8 @@
     "        json.dump(logs, f, indent=4)\n",
     "\n",
     "# Parameters and file paths\n",
-    "log_file = 'experiment_log.json'\n",
-    "model_file = 'regression_pipeline.joblib'\n",
+    "log_file = 'model/experiment_log.json'\n",
+    "model_file = 'model/regression_pipeline.joblib'\n",
     "\n",
     "# Create the pipeline\n",
     "pipeline = createPipeline(numerical_features, categorical_features)\n",
@@ -352,7 +317,7 @@
     "\n",
     "# Log training run results to file\n",
     "metrics.update({\"test_mae\": mae_test, \"test_rmse\": rmse_test})\n",
-    "log_to_file(log_file, params, metrics, training_details)\n",
+    "#log_to_file(log_file, params, metrics, training_details)\n",
     "\n",
     "# Refit the final model on the entire dataset to improve generalization by leveraging all available information\n",
     "pipeline.fit(X, y)\n",
