--- a/Data Engineering/ingest_data.ipynb
+++ b/Data Engineering/ingest_data.ipynb
@@ -58,8 +58,7 @@
    "metadata": {},
    "source": [
     "## 2. Create functions\n",
-    "#### 2.1 Use Beautiful Soup to scrape URLs needed to download data\n",
-    "This function will download listings, reviews, and geospatial data."
+    "#### 2.1 Function to retrieve URLs for listings, reviews, and geospatial data from Inside Airbnb"
    ]
   },
   {
@@ -68,12 +67,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests\n",
-    "from bs4 import BeautifulSoup\n",
-    "import boto3\n",
-    "\n",
-    "# Function to scrape Inside Airbnb page and get URLs for desired file types and market\n",
-    "def scrape_airbnb_urls(market):\n",
+    "# Funtion to download Inside Airbnb page and get URLs for desired file types and market\n",
+    "def download_airbnb_urls(market):\n",
     "    url = \"https://insideairbnb.com/get-the-data/\"\n",
     "    response = requests.get(url)\n",
     "    if response.status_code == 200:\n",
@@ -89,7 +84,7 @@
     "                    urls.append(href)\n",
     "        return urls\n",
     "    else:\n",
-    "        raise ValueError(f\"Failed to scrape Inside Airbnb page. Status code: {response.status_code}\")"
+    "        raise ValueError(f\"Failed to download Inside Airbnb page. Status code: {response.status_code}\")"
    ]
   },
   {
@@ -126,7 +121,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.3 Last function will upload downloaded data into S3"
+    "#### 2.3 Function to upload data to S3"
    ]
   },
   {
@@ -157,19 +152,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "markets = ['albany','los-angeles','san-francisco','new-york-city','chicago','seattle','washington-dc']"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Ingest and upload market data for S3\n",
+    "## 3. Ingest and upload market data to S3 bucket\n",
     "Estimated time to download market data and upload is 15 to 20 minutes."
    ]
   },
@@ -242,18 +228,19 @@
     }
    ],
    "source": [
-    "for market in markets:\n",
-    "    # Scrape Inside Airbnb page for URLs ending with .csv.gz or .geojson for the specified market\n",
-    "    scraped_urls = scrape_airbnb_urls(market)\n",
+    "markets = ['albany','los-angeles','san-francisco','new-york-city','chicago','seattle','washington-dc']\n",
     "\n",
+    "for market in markets:\n",
+    "    # Retrieve URLs for Inside Airbnb data\n",
+    "    source_urls = download_airbnb_urls(market)\n",
+    "\n",
+    "    # Download data from doanloaded URLs\n",
+    "    data = download_data(market, source_urls)\n",
+    "\n",
+    "    # Upload data to S3\n",
     "    # S3 bucket and prefix where you want to upload the data\n",
     "    bucket_name = 'airbnb-capstone-project'\n",
     "    s3_prefix = market\n",
-    "\n",
-    "    # Download data from scraped URLs\n",
-    "    data = download_data(market, scraped_urls)\n",
-    "\n",
-    "    # Upload data to S3\n",
     "    upload_to_s3(data, bucket_name, s3_prefix)"
    ]
   },
