Uploaded hexagon model EDA and model training files
Alternative model using hexagons to capture localized features was developed. Uploading notebooks for EDA and model training.

--- a/Data Engineering/ingest_data.ipynb
+++ b/Data Engineering/ingest_data.ipynb
@@ -32,7 +32,7 @@
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
     "\n",
-    "# # load environment variables\n",
+    "# load environment variables\n",
     "load_dotenv()"
    ]
   },
