Refactor to make use of helper_functions script

--- a/Model/H3_Model_Development.ipynb
+++ b/Model/H3_Model_Development.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,132 +31,57 @@
     "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score\n",
     "\n",
     "import boto3\n",
-    "from joblib import dump"
+    "from joblib import dump\n",
+    "\n",
+    "import sys\n",
+    "import os\n",
+    "\n",
+    "# Get the current working directory\n",
+    "current_directory = os.getcwd()\n",
+    "\n",
+    "# Add the parent directory to sys.path\n",
+    "sys.path.append(os.path.abspath(os.path.join(current_directory, '..')))\n",
+    "\n",
+    "# Import the helper_functions module\n",
+    "from helper_functions import connect_to_snowflake, get_data, write_to_snowflake"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Import Data\n",
-    "#### 1.1 Load Snowflake credentials for temp user"
+    "## 1.1 Import Data\n",
+    "#### 1.1 Connect to Snowflake using schema FEATURE_STORE"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load environment variables from a .env file\n",
-    "load_dotenv()\n",
-    "\n",
-    "try:\n",
-    "    TEMP_USER = os.getenv('SNOWSQL_TEMP_USER')\n",
-    "    TEMP_USER_PASSWORD = os.getenv('SNOWSQL_TEMP_PWD')\n",
-    "    ACCOUNT = os.getenv('SNOWFLAKE_ACCOUNT')\n",
-    "    \n",
-    "    if not TEMP_USER:\n",
-    "        raise ValueError(\"Environment variable SNOWSQL_TEMP_USER must be set\")\n",
-    "    if not TEMP_USER_PASSWORD:\n",
-    "        raise ValueError(\"Environment variable SNOWSQL_TEMP_PWD must be set\")\n",
-    "\n",
-    "except ValueError as ve:\n",
-    "    print(f\"Error: {ve}\")\n",
-    "    \n",
-    "except Exception as e:\n",
-    "    print(f\"An unexpected error occurred: {e}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 1.2 Connect to Snowflake"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Connected to Snowflake successfully at 2024-08-07 22:0705\n"
+      "Successfully connected to Snowflake schema FEATURE_STORE\n"
      ]
     }
    ],
    "source": [
-    "# Establish connection to Snowflake\n",
-    "current_time = datetime.now().strftime('%Y-%m-%d %H:%M%S')\n",
-    "\n",
-    "try:\n",
-    "    conn = snowflake.connector.connect(\n",
-    "        user=TEMP_USER,\n",
-    "        password=TEMP_USER_PASSWORD,\n",
-    "        account=ACCOUNT,\n",
-    "        warehouse='COMPUTE_WH',\n",
-    "        database='AIRBNB',\n",
-    "        schema='FEATURE_STORE'\n",
-    "    )\n",
-    "\n",
-    "    print(f'Connected to Snowflake successfully at {current_time}')\n",
-    "\n",
-    "except Exception as e:\n",
-    "    print(f'Failed to connect to Snowflake on {current_time} due to error code {e}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_data(sql_query, date_columns=None):\n",
-    "    \"\"\"\n",
-    "    Executes a SQL query and returns the result as a pandas DataFrame.\n",
-    "\n",
-    "    Args:\n",
-    "        sql_query (str): SQL query to execute.\n",
-    "\n",
-    "    Returns:\n",
-    "        df_result: Resulting DataFrame from the SQL query.\n",
-    "    \"\"\"\n",
-    "    try:\n",
-    "        cursor = conn.cursor()\n",
-    "        \n",
-    "        cursor.execute(sql_query)\n",
-    "\n",
-    "        # load data into dataframe\n",
-    "        df_result = cursor.fetch_pandas_all()\n",
-    "\n",
-    "        # Convert column names to lowercase\n",
-    "        df_result.columns = map(str.lower, df_result.columns)\n",
-    "\n",
-    "        # Parse specified date columns\n",
-    "        if date_columns:\n",
-    "            for col in date_columns:\n",
-    "                df_result[col] = pd.to_datetime(df_result[col], errors='coerce')\n",
-    "\n",
-    "    finally:\n",
-    "        if cursor is not None:\n",
-    "            cursor.close()\n",
-    "\n",
-    "    return df_result"
+    "conn = connect_to_snowflake(schema_name='FEATURE_STORE')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1.3 Load data from `listings_cleaned_h3` table"
+    "#### 1.2 Load data from table LISTINGS_CLEANED_H3\n",
+    "Import Listings data with h3_index and aggregated features for each hexagon"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +90,7 @@
        "(77425, 13)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,13 +100,13 @@
     "select * from listings_cleaned_h3\n",
     " '''\n",
     "\n",
-    "df = get_data(sql_query)\n",
+    "df = get_data(sql_query, conn)\n",
     "df.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -241,17 +166,17 @@
        "      <th>1</th>\n",
        "      <td>albany</td>\n",
        "      <td>Entire home/apt</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>42.66078</td>\n",
-       "      <td>-73.80553</td>\n",
-       "      <td>50.0</td>\n",
-       "      <td>872b8900cffffff</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>2</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>56.0</td>\n",
+       "      <td>42.65222</td>\n",
+       "      <td>-73.76724</td>\n",
+       "      <td>118.0</td>\n",
+       "      <td>872b89029ffffff</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>103.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -260,46 +185,14 @@
        "      <td>2</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>42.66075</td>\n",
-       "      <td>-73.80605</td>\n",
-       "      <td>70.0</td>\n",
-       "      <td>872b8900cffffff</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>42.64615</td>\n",
+       "      <td>-73.75966</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>872b89076ffffff</td>\n",
+       "      <td>3.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>56.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>albany</td>\n",
-       "      <td>Private room</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>42.65975</td>\n",
-       "      <td>-73.81196</td>\n",
-       "      <td>75.0</td>\n",
-       "      <td>872b8900cffffff</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>56.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>albany</td>\n",
-       "      <td>Private room</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>42.64936</td>\n",
-       "      <td>-73.80278</td>\n",
-       "      <td>49.0</td>\n",
-       "      <td>872b8900cffffff</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>56.0</td>\n",
+       "      <td>105.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -308,33 +201,37 @@
       "text/plain": [
        "   market        room_type  accommodates  bathrooms  beds  latitude  \\\n",
        "0  albany     Private room             2        1.0   0.0  42.66719   \n",
-       "1  albany  Entire home/apt             1        1.0   0.0  42.66078   \n",
-       "2  albany  Entire home/apt             2        1.0   1.0  42.66075   \n",
-       "3  albany     Private room             2        1.0   1.0  42.65975   \n",
-       "4  albany     Private room             1        1.5   1.0  42.64936   \n",
+       "1  albany  Entire home/apt             2        1.0   1.0  42.65222   \n",
+       "2  albany  Entire home/apt             2        1.0   1.0  42.64615   \n",
        "\n",
        "   longitude  price         h3_index  accommodates_median  bathrooms_median  \\\n",
        "0  -73.81580   50.0  872b8900cffffff                  2.0               1.0   \n",
-       "1  -73.80553   50.0  872b8900cffffff                  2.0               1.0   \n",
-       "2  -73.80605   70.0  872b8900cffffff                  2.0               1.0   \n",
-       "3  -73.81196   75.0  872b8900cffffff                  2.0               1.0   \n",
-       "4  -73.80278   49.0  872b8900cffffff                  2.0               1.0   \n",
+       "1  -73.76724  118.0  872b89029ffffff                  3.0               1.0   \n",
+       "2  -73.75966   90.0  872b89076ffffff                  3.0               1.0   \n",
        "\n",
        "   beds_median  price_median  \n",
        "0          1.0          56.0  \n",
-       "1          1.0          56.0  \n",
-       "2          1.0          56.0  \n",
-       "3          1.0          56.0  \n",
-       "4          1.0          56.0  "
+       "1          1.0         103.0  \n",
+       "2          1.0         105.0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head()"
+    "df.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Close connection to Snowflake\n",
+    "conn.close()"
    ]
   },
   {
@@ -347,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +311,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "price_median provides a useful aggregate measure of the price within the same spatial cluster (hexagon). Its moderate positive correlation with the price of individual listings indicates that it is a relevant feature for predicting prices. price_median provides contextual information about the pricing environment within each hexagon. Even if individual listing prices vary, the median price of listings within the same spatial cluster can help capture local pricing trends and market conditions."
+    "**Correlation results**\n",
+    "\n",
+    "Top 5 important features are accommodates, room_type_Entire home/apt, price_median, beds, and bathrooms.\n",
+    "\n",
+    "Price_median provides a useful aggregate measure of the price within the same spatial cluster (hexagon). Its moderate positive correlation with the price of individual listings indicates that it is a relevant feature for predicting prices. price_median provides contextual information about the pricing environment within each hexagon. Even if individual listing prices vary, the median price of listings within the same spatial cluster can help capture local pricing trends and market conditions."
    ]
   },
   {
@@ -451,8 +352,8 @@
     "## 3. Model Training\n",
     "#### 3.1 Create training pipeline\n",
     "The following steps are applied in the pipeline:\n",
-    "- Preprocessor:  ColumnTransfomer is used to apply standardization of numerical features and one-hot encoding of categorical features.\n",
-    "- Pipeline:  used to streamline the workflow by combining the preprocessing steps along with the a RandomForestRegressor model."
+    "- **Preprocessor**:  ColumnTransfomer is used to apply standardization of numerical features and one-hot encoding of categorical features.\n",
+    "- **Pipeline**:  used to streamline the workflow by combining the preprocessing steps along with the a RandomForestRegressor model."
    ]
   },
   {
@@ -1187,7 +1088,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 4.2 Save the model to AWS S3"
+    "#### 4.2 Upload the model to AWS S3"
    ]
   },
   {
@@ -1228,13 +1129,6 @@
     "except FileNotFoundError:\n",
     "    print(f\"The file {file_name} was not found.\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
