finalized outlier specs

--- a/train.ipynb
+++ b/train.ipynb
@@ -171,7 +171,6 @@
     "features = ['market', 'room_type', 'accommodates', 'bathrooms', 'beds', 'latitude', 'longitude', 'amenities']\n",
     "categorical_features = ['market', 'room_type']  # Features with categorical data\n",
     "numerical_features = ['accommodates', 'bathrooms', 'beds', 'latitude', 'longitude']  # Features with numerical data\n",
-    "text_features = ['amenities']  # (Optional) Feature for text data like amenities\n",
     "target = 'price'  # Target variable to predict\n",
     "\n",
     "# Filter the dataframe to include only the selected features and target column\n",
@@ -179,7 +178,7 @@
     "\n",
     "# Remove NA values from the 'price' column\n",
     "df_raw_no_na = df_raw[target].dropna()\n",
-    "# Remove rows where the price exceeds $600 per night (97th percentile) to avoid outliers, consider dropping vals <40 (3rd percentile)\n",
+    "# Remove rows where the price exceeds $600 per night (97th percentile) to avoid outliers\n",
     "df = df[df[target] <= 600]\n",
     "\n",
     "# Drop rows with missing values in the target column to ensure data integrity\n",
@@ -208,7 +207,32 @@
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross-validation MAE scores: [45.66534262 46.30377953 46.52061509 46.76627372 47.00417896 46.03335114\n",
+      " 45.68168021 45.95040059 46.96100644 45.72665094]\n",
+      "Average cross-validation MAE: 46.26132792400367\n",
+      "Cross-validation RMSE scores: [69.5905525  70.35051165 70.57718629 70.92256786 72.49644571 68.91319669\n",
+      " 69.19007214 69.40628224 70.79759222 68.86378946]\n",
+      "Average cross-validation RMSE: 70.11081967490922\n",
+      "Test set MAE: 46.140358929648826\n",
+      "Test set RMSE: 69.5552348912378\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['model/regression_pipeline.joblib']"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Get model run start time\n",
     "start_time = datetime.now()\n",
