Update market analysis page

--- a/Exploratory Data Analysis/EDA_using_hexagons.ipynb
+++ b/Exploratory Data Analysis/EDA_using_hexagons.ipynb
@@ -511,7 +511,7 @@
    "outputs": [],
    "source": [
     "df.loc[:, 'bathrooms'] = df['bathrooms'].fillna(df['bathrooms'].mode()[0])\n",
-    "df.loc[:, 'beds'] = df['beds'].fillna(df['beds'].mode()[0])\n"
+    "df.loc[:, 'beds'] = df['beds'].fillna(df['beds'].mode()[0])"
    ]
   },
   {
@@ -622,8 +622,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.5 Remove outlier rental price for each market\n",
-    "need to write details about why this method was chosen"
+    "#### 2.5 Remove outlier rental price for each market"
    ]
   },
   {
